tests/expectations/parser-expression/expression/array_inline_fail.out
Error [EPAR0370005]: expected ] -- found '<eof>'
    --> test_0:1:2
     |
   1 | []
     |  ^
Error [EPAR0370034]: An array expression must have at least one element.
    --> test_1:1:1
     |
   1 | [,]
     | ^^^
Error [EPAR0370005]: expected ] -- found ','
    --> test_2:1:3
     |
   1 | [,,]
     |   ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_3:1:4
     |
   1 | [0,,]
     |    ^
Error [EPAR0370005]: expected ] -- found '0'
    --> test_4:1:3
     |
   1 | [,0]
     |   ^
Error [EPAR0370005]: expected ] -- found '0'
    --> test_5:1:3
     |
   1 | [,0,]
     |   ^
Error [EPAR0370034]: An array expression must have at least one element.
    --> test_6:1:1
     |
   1 | [;]
     | ^^^
Error [EPAR0370005]: expected ] -- found ';'
    --> test_7:1:3
     |
   1 | [;;]
     |   ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_8:1:4
     |
   1 | [0;;]
     |    ^
Error [EPAR0370005]: expected ] -- found '0'
    --> test_9:1:3
     |
   1 | [;0]
     |   ^
Error [EPAR0370005]: expected ] -- found '0'
    --> test_10:1:3
     |
   1 | [;0;]
     |   ^
